Switched to regular serif font for body text
Source Serif Pro wasn't looking great in all browsers and OSes, so
I switched back to using the default serif font for body text.

--- a/site.css
+++ b/site.css
@@ -20,7 +20,6 @@
 */
 
 @import url('https://fonts.googleapis.com/css?family=Andada');
-@import url('https://fonts.googleapis.com/css?family=Source+Serif+Pro');
 
 .guide-title {
     text-align: center;
@@ -34,7 +33,7 @@
     width: 800px;
     margin: auto;
 
-    font-family: 'Source Serif Pro', serif;
+    font-family: serif;
     font-size: 20px;
 }
 
